<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/yatLibContainerBackgroundColor">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/yat_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/yat_lib_yat_logo_top_margin"
        android:src="@drawable/yat_lib_yat_logo" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/yat_lib_transparent"
        android:src="?attr/yatLibCloseButtonDrawable" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/title"
        android:layout_gravity="center"
        android:layout_marginHorizontal="60dp"
        android:src="@drawable/yat_lib_screen3_min" />

    <yat.android.ui.components.CustomFontTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/description_text_view"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/yat_lib_info_title_bottom_margin"
        android:gravity="center"
        android:letterSpacing="0.015"
        android:lineSpacingExtra="6dp"
        android:text="@string/yat_lib_step_3_title"
        android:textColor="?attr/yatLibInfoTitleColor"
        android:textSize="@dimen/yat_lib_info_title_font_size"
        app:customFont="?attr/yatLibInfoTitleFont" />

    <yat.android.ui.components.CustomFontTextView
        android:id="@+id/description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/get_your_yat_button"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="@dimen/yat_lib_info_description_bottom_margin"
        android:gravity="center"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6dp"
        android:text="@string/yat_lib_step_3_description"
        android:textColor="@color/yat_lib_x_light_gray"
        android:textSize="@dimen/yat_lib_info_description_font_size"
        app:customFont="?attr/yatLibInfoDescriptionFont" />

    <yat.android.ui.components.CustomFontButton
        android:id="@+id/get_your_yat_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/connect_an_existing_yat_button"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/yat_lib_primary_button_bg"
        android:text="@string/yat_lib_step_3_get_your_yat"
        android:textAllCaps="false"
        android:textColor="@color/yat_lib_white"
        android:textSize="16sp"
        app:customFont="?attr/yatLibButtonFont" />

    <LinearLayout
        android:id="@+id/progress_bar_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignStart="@id/get_your_yat_button"
        android:layout_alignTop="@id/get_your_yat_button"
        android:layout_alignEnd="@id/get_your_yat_button"
        android:layout_alignBottom="@id/get_your_yat_button"
        android:background="@drawable/yat_lib_primary_button_bg"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:visibility="visible" />
    </LinearLayout>

    <yat.android.ui.components.CustomFontButton
        android:id="@+id/connect_an_existing_yat_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/yat_lib_secondary_button_bg"
        android:text="@string/yat_lib_step_3_connect_an_existing_yat"
        android:textAllCaps="false"
        android:textColor="?attr/yatLibSecondaryButtonTextColor"
        android:textSize="16sp"
        app:customFont="?attr/yatLibButtonFont" />

</RelativeLayout>