<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.circularreveal.CircularRevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/yat_lib_root_reveal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yat_lib_transparent"
    android:fitsSystemWindows="true"
    android:visibility="invisible"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/yat_lib_root_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="#000000">

        <FrameLayout
            android:id="@+id/yat_lib_video"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alpha="0"
            app:layout_constraintBottom_toTopOf="@+id/yat_lib_main_info_container"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextureView
                android:id="@+id/yat_lib_video_texture_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/yat_lib_outcoming_transaction_fader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-100dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/yat_lib_main_info_container">

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/yat_lib_outcoming_transaction_fade_bg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/yat_lib_black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/yat_lib_successful_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <yat.android.ui.components.CustomFontTextView
                android:id="@+id/yat_lib_successful_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="52dp"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.05"
                android:text="@string/yat_lib_transaction_outcoming_successful"
                android:textAllCaps="true"
                android:textColor="@color/yat_lib_transaction_highlighted_text"
                android:textSize="30sp"
                app:customFont="@string/yat_lib_font_bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/yat_lib_main_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <yat.android.ui.components.CustomFontTextView
                android:id="@+id/yat_lib_main_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="52dp"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.05"
                android:text="@string/yat_lib_transaction_incoming_text"
                android:textAllCaps="true"
                android:textColor="@color/yat_lib_transaction_text_color"
                android:textSize="30sp"
                app:customFont="@string/yat_lib_font_bold" />

            <ProgressBar
                android:id="@+id/yat_lib_progress_bar"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19dp"
                android:indeterminateTint="@color/yat_lib_progress_tint"
                android:visibility="invisible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.circularreveal.CircularRevealFrameLayout>
